Fix scrollbar again

--- a/app/assets/sass/partials/webchat.scss
+++ b/app/assets/sass/partials/webchat.scss
@@ -17,7 +17,7 @@ $iframe-width: 100 - $webchat-width;
 	left: 0;
 	top: 0;
 	-webkit-overflow-scrolling: touch;
-	overflow-y: scroll;
+	overflow-y: auto;
 
 	iframe {
 		height: 100%;
